-------------
Version 0.7.1
-------------

COCKPIT
- Fixed a menu display bug that caused the bucket and object action menus to 
  appear behind other GUI elements on some Windows systems.
- The Logging Status settings of CloudFront distributions can now be managed
  within the CloudFront Distributions dialog box (see the Tools menu).

TOOLKIT

  * General

- Added simplified constructors for S3Object, so the object's bucket need
  not be specified in advance. This is most useful when uploading data.
- Added support for JMX instrumentation of S3Service functions. To enable
  JMX set the system property "com.sun.management.jmxremote". Instrumentation
  for S3Bucket and S3Object MBeans is disabled by default, to enable this
  reporting set the following system properties to "true": 
  "jets3t.bucket.mx", "jets3t.object.mx"
- Added method getAccountOwner() to S3Service which allows you to look up the
  ID and display name of an S3 account's owner, even if the account contains
  no buckets.
- Tweaks to improve support for using JetS3t with the open source Eucalyptus
  cloud computing service.

  * REST Implementation

- Fixed a configuration error that caused the REST implementation to be limited
  to 20 simultaneous connections, regardless of the "httpclient.max-connections" 
  property setting. Now the JetS3t property "httpclient.max-connections" sets
  the global connection limit, while the optional property 
  "httpclient.max-connections-per-host" sets the per-host connection limit.

  * CloudFront Service Implementation
  
- Added support for the new Logging Status feature that allows log files for 
  activity in your CloudFront distributions to be sent to an S3 bucket.

KUDOS TO:

Laxmilal Menaria of Chambal.com Inc. for a patch that contributed to the new 
S3Service#getAccountOwner feature.

Doug MacEachern of Hyperic.com for contributing the bulk of a JMX instrumentation
implementation.


-------------
Version 0.7.0
-------------

COCKPIT